--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -1,4 +1,11 @@
 .container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: 1;
+  background: white;
+  padding-top: 120px;
   display: flex;
 }
 
@@ -15,24 +22,48 @@
   color: var(--peach);
 }
 
+.carousel-container {
+  width: 100%;
+}
+
 .carousel {
   margin: 0 auto;
-  width: 830px;
+  max-width: 830px;
 }
 
 .carousel-item {
-  width: 720px;
+  width: calc(100% - 40px);
   height: 400px;
   overflow: hidden;
-  background: red;
   display:flex;
   align-items:center;
   justify-content:center;
+  flex-flow: column;
 }
 
-.carousel-item img {
-  max-height: 100%;
+.carousel-item-image {
+  display: flex;
+  flex: 1;
+  align-items:center;
+  justify-content:center;
+  width: 100%;
+  height: 100%;
+}
+.carousel-item-image img {
   max-width: 100%;
+  max-height: 100%;
+}
+
+.carousel-item-primary {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.carousel-item-secondary {
+  font-size: 12px;
+  margin-bottom: 10px;
 }
 
 .arrow {
@@ -43,5 +74,5 @@
 
 .thumbnails {
   margin: 20px auto 0 auto;
-  width: 750px;
+  max-width: 750px;
 }
