--- a/src/Thumbnail.css
+++ b/src/Thumbnail.css
@@ -1,7 +1,7 @@
 .thumbnail {
   width: 150px;
   height: 150px;
-  background: red;
+  /*background: red;*/
   display:flex;
   align-items:center;
   justify-content:center;
