--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -11,11 +11,14 @@
 
 .side {
   flex: 1;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .cancel-button {
   color: black;
   font-size: 30px;
+  margin-right: 10px;
 }
 
 .cancel-button:hover {
@@ -32,26 +35,38 @@
 }
 
 .carousel-item {
-  width: calc(100% - 40px);
   height: 400px;
-  overflow: hidden;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   flex-flow: column;
+}
+
+.carousel-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.carousel-description {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .carousel-item-image {
   display: flex;
   flex: 1;
-  align-items:center;
-  justify-content:center;
-  width: 100%;
+  align-items: center;
+  justify-content: center;
+  /*width: 100%;*/
   height: 100%;
+  border: 1px solid;
 }
 .carousel-item-image img {
-  max-width: 100%;
   max-height: 100%;
+  max-width: 100%;
 }
 
 .carousel-item-primary {
@@ -75,4 +90,5 @@
 .thumbnails {
   margin: 20px auto 0 auto;
   max-width: 750px;
+  justify-content: center;
 }
