--- a/src/Profile.css
+++ b/src/Profile.css
@@ -18,6 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid;
 
   grid-column-end: span 2;
   grid-row-end: span 2;
