--- a/src/Header.css
+++ b/src/Header.css
@@ -11,7 +11,6 @@
   display: flex;
   height: 100px;
   width: 100%;
-  padding-bottom: 20px;
   position: fixed;
   top: 0;
   z-index: 2;
@@ -23,7 +22,15 @@
   background: var(--peach);
 }
 
-.header.active a,
+.link {
+  color: black;
+  margin-right: 20px;
+}
+
+.link:hover {
+  color: var(--peach);
+}
+
 .header.active .subtitle,
 .header.active .social {
   color: white;
@@ -49,8 +56,12 @@
 }
 
 .title-container {
-  display: inline-block;
-  margin-top: 20px;
+  display: flex;
+  justify-content: center
+}
+
+.header-title {
+  width: 300px;
 }
 
 .title {
