--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 a {
   text-decoration: none;
 }
+
+.app-body {
+  padding: 0 200px;
+}
+
+.copyright {
+  margin-top: 20px;
+  font-style: italic;
+}
