--- a/src/AboutPage.css
+++ b/src/AboutPage.css
@@ -1,9 +1,12 @@
 .about-container {
+  max-width: 1000px;
+  margin: 0 auto;
   display: flex;
+  padding: 0 20px;
 }
 
 .picture-container {
-  flex: 1;
+  flex: 5;
 }
 
 .picture {
@@ -16,9 +19,13 @@
   height: 100%;
 }
 
-.info {
+
+.about-divider {
   flex: 1;
-  margin-left: 200px;
+}
+
+.info {
+  flex: 5;
 }
 
 .info-title {
