--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
 a {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
 
 a:visited {
-  color: black;
+    color: black;
 }
 
 
 .app-body {
-  max-width: 1000px;
-  margin: 0 auto;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .copyright {
-  margin: 20px 0;
-  font-style: italic;
+    margin: 20px 0;
+    font-style: italic;
+    font-size: 10px;
 }
