Fix carousel layout

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -24,7 +24,7 @@ a:visited {
 }
 
 .copyright {
-    margin: 20px 0 20px 20px;
+    padding: 20px 0 20px 20px;
     font-style: italic;
     font-size: 10px;
 }
