--- a/src/AboutPage.module.css
+++ b/src/AboutPage.module.css
@@ -38,3 +38,9 @@
   text-align: justify;
   text-justify: inter-word;
 }
+
+.resume {
+  margin-top: 20px;
+  font-weight: bold;
+  text-decoration: underline;
+}
