--- a/src/Thumbnail.module.css
+++ b/src/Thumbnail.module.css
@@ -8,9 +8,11 @@
 .thumbnail img {
   max-width: 100%;
   max-height: 100%;
-}
-
-.thumbnail-selected {
   border: 3px solid;
   box-sizing: border-box;
+  border-color: white;
+}
+
+.thumbnailSelected {
+  border-color: black !important;
 }
