--- a/src/Profile.module.css
+++ b/src/Profile.module.css
@@ -27,3 +27,15 @@
   object-fit: cover;
 }
 
+.arrow {
+  margin-right: 10px;
+}
+
+.footer {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
