--- a/src/Carousel.module.css
+++ b/src/Carousel.module.css
@@ -53,15 +53,17 @@
 .carouselItemImage {
   display: flex;
   flex: 1;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   width: 100%;
+  height: 0;
 }
 
 .carouselItemImage img {
+  flex: 1;
   object-fit: contain;
-  height: 100%;
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  /*width: 100%;*/
 }
 
 .carouselItemPrimary {
