--- a/src/Thumbnail.module.css
+++ b/src/Thumbnail.module.css
@@ -1,8 +1,10 @@
 .thumbnail {
   /*background: red;*/
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 
 .thumbnail img {
