--- a/src/AboutPage.module.css
+++ b/src/AboutPage.module.css
@@ -1,22 +1,31 @@
 .container {
-  max-width: 1000px;
+  max-width: 100%;
   display: flex;
   flex: 1;
   padding: 0 20px;
 }
 
+.containerVertical {
+  flex-direction: column;
+}
+
 .pictureContainer {
-  flex: 5;
-}
-
-.picture {
-  max-width: 600px;
-  max-height: 600px;
-}
-
-.picture img {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.pictureContainerHorizontal {
+  margin-right: 20px;
+  background-position: top;
+}
+
+.asdf {
+  flex: 1;
 }
 
 .aboutDivider {
@@ -24,7 +33,7 @@
 }
 
 .info {
-  flex: 5;
+  max-width: 500px;
 }
 
 .infoTitle {
