--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,23 +1,16 @@
 a {
   text-decoration: none;
-  color: black;
-}
-
-a:visited {
-  color: black;
 }
 
 .app {
   min-height: 100vh;
   min-width: 100vw;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .appBody {
-  max-width: 1000px;
   width: 100%;
-  margin: 0 auto;
   flex: 1;
   display: flex;
   flex-direction: column;
