--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -1,14 +1,11 @@
 :root {
   --gray: rgb(149, 151, 153);
-  --peach: rgb(248, 160, 120);
+  --peach: rgb(229, 131, 132);
+  --blue: rgb(20, 81, 112);
 }
 
 .placeholder {
   height: 120px;
-}
-
-.headerContainer {
-  height: ;
 }
 
 .header {
@@ -22,39 +19,27 @@
   transition: all 0.5s ease-in-out;
 }
 
-.largeHeader {
-  width: 100%;
-  height: 100%;
-  display: flex;
+.sideBar {
+  width: 300px;
+  padding-top: 100px;
+  padding-left: 50px;
 }
 
-.header.active {
-  background: var(--peach);
+.sideBarTitle {
+  width: 200px;
 }
 
-.largeHeader .link {
-  color: black;
-  margin-right: 20px;
-  font-size: 15px;
+.blueText {
+  color: var(--blue);
 }
 
-.link:hover {
+.pinkText {
   color: var(--peach);
 }
 
-.header.active .subtitle,
-.header.active .social {
-  color: white;
-}
-
-.headerItem {
-  align-items: center;
-  display: flex;
-  flex: 1;
-}
-
 .navigation {
-  margin-left: 40px;
+  display: flex;
+  flex-direction: column;
 }
 
 .navigationItem {
@@ -66,13 +51,26 @@
   color: var(--peach);
 }
 
+.header.active {
+  background: var(--peach);
+}
+
+.link {
+  padding-top: 10px;
+}
+
+.link:hover {
+  color: var(--peach);
+}
+
+.header.active .subtitle,
+.header.active .social {
+  color: white;
+}
+
 .titleContainer {
   display: flex;
   justify-content: center;
-}
-
-.headerTitle {
-  width: 300px;
 }
 
 .title {
@@ -89,14 +87,17 @@
 }
 
 .social {
-  justify-content: flex-end;
-  margin-right: 40px;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: row;
+  width: 100px;
 }
 
 .socialItem {
   font-size: 20px;
-  margin: 0 10px;
+  margin-right: 20px;
   cursor: pointer;
+  color: var(--blue);
 }
 
 .socialItem:hover {
