--- a/src/Profile.module.css
+++ b/src/Profile.module.css
@@ -1,5 +1,12 @@
 .profile {
     width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.mainContent {
+    display: flex;
+    flex: 1;
 }
 
 .gallery {
