--- a/src/Carousel.module.css
+++ b/src/Carousel.module.css
@@ -3,6 +3,16 @@
   flex: 1;
   background: white;
   display: flex;
+  flex-direction: row;
+}
+
+.placeHolder {
+  width: 300px;
+}
+
+.mainContent {
+  flex: 1;
+  display: flex;
   flex-direction: column;
 }
 
@@ -14,9 +24,16 @@
 
 .cancelContainer {
   text-align: right;
-  color: black;
-  font-size: 20px;
+  font-size: 30px;
   margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 20px;
+}
+
+.cancelButton {
+  color: var(--blue);
 }
 
 .cancelButton:hover {
@@ -60,6 +77,7 @@
 }
 
 .carouselItemPrimary {
+  color: var(--blue);
   font-size: 20px;
   font-weight: bold;
   margin-top: 5px;
@@ -67,6 +85,7 @@
 }
 
 .carouselItemSecondary {
+  color: var(--blue);
   font-size: 12px;
   margin-bottom: 10px;
 }
@@ -78,6 +97,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--blue);
 }
 
 .thumbnails {
