--- a/src/LoadingAnimation.css
+++ b/src/LoadingAnimation.css
@@ -1,5 +1,13 @@
 /* Ref: https://loading.io/css/ */
 
+.lds-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 .lds-default {
   display: inline-block;
   position: relative;
