--- a/src/Profile.module.css
+++ b/src/Profile.module.css
@@ -25,7 +25,7 @@
     overflow: hidden;
     align-items: center;
     justify-content: center;
-    border: 1px solid;
+    /* border: 1px solid; */
     grid-column-end: span 2;
     grid-row-end: span 2;
 }
